Added binging tag in structs and changed swagger doc
