# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API for Golang Dynamic User Segmentation service.",
-        "title": "Dynamic User Segmentation service Swagger API",
+        "description": "API for Golang Dynamic User Segmentation api.",
+        "title": "Dynamic User Segmentation api Swagger API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
         "version": "1.0"
@@ -187,6 +187,9 @@
     "definitions": {
         "change_user_segments.ChangeUserSegmentsIn": {
             "type": "object",
+            "required": [
+                "user_id"
+            ],
             "properties": {
                 "add_segments": {
                     "type": "array",
@@ -208,7 +211,8 @@
                     ]
                 },
                 "expired_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2023-08-27T15:40:00Z"
                 },
                 "user_id": {
                     "type": "integer",
@@ -227,6 +231,9 @@
         },
         "create_segment.CreateSegmentIn": {
             "type": "object",
+            "required": [
+                "segment_slug"
+            ],
             "properties": {
                 "segment_slug": {
                     "type": "string",
@@ -236,6 +243,9 @@
         },
         "delete_segment.DeleteSegmentIn": {
             "type": "object",
+            "required": [
+                "segment_slug"
+            ],
             "properties": {
                 "segment_slug": {
                     "type": "string",
