# internal/handler/create_segment/dto.go
@@ -1,5 +1,5 @@
 package create_segment
 
 type CreateSegmentIn struct {
-	SegmentSlug string `json:"segment_slug" example:"AVITO_VOICE_MESSAGE"`
+	SegmentSlug string `json:"segment_slug" example:"AVITO_VOICE_MESSAGE" binding:"required"`
 }
