# internal/handler/delete_segment/dto.go
@@ -1,5 +1,5 @@
 package delete_segment
 
 type DeleteSegmentIn struct {
-	SegmentSlug string `json:"segment_slug" example:"AVITO_VOICE_MESSAGE"`
+	SegmentSlug string `json:"segment_slug" example:"AVITO_VOICE_MESSAGE" binding:"required"`
 }
